--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,9 @@ body{
   color: #333;
   font-size: 16px;
   font-weight: 400;
-  font-family: 'Nanum Gothic', sans-serif;
-  overflow: hidden; 
+  font-family: 'Nanum Gothic', sans-serif; 
   height: 100vh;
-
+  overflow: hidden;
 }
 img{
   display: block;
@@ -33,13 +32,22 @@ input{
   color: #FFF;
   border-radius: 20px;
   transition: all 0.2s ;
-  font-size: 40px;
+  font-size: 30px;
   background: #444444;
+  box-sizing: border-box;
+}
+.btn:hover{
+  background:#fff;
+  color: #444444;
+  border: #444444 solid 2px;
+  border-radius: 20px;
 }
 /* -----------------index .html--------------------*/
 #wrap{
   display: flex;
+  overflow: hidden;
 }
+
 #left{
  width: 50%;
  position: relative;
@@ -89,11 +97,14 @@ input{
   width: 100%;
   height: 100%;
 }
-
+#content .nomal{
+  width: 100%;
+  overflow:auto;
+}
 .tabBG table {
   width: 100%;
   border: 1px solid #444444;
-  border-collapse: collapse;
+  border-collapse: collapse; 
 }
 .tabBG th, td {
   border: 1px solid #444444;
@@ -102,4 +113,10 @@ input{
 .tabBG table th{
   background-color: #444444;
   color: #fff;
+  font-size: 40px;
+  text-align: center;
+}
+.tabBG table td{
+  font-size: 30px;
+  text-align: center;
 }
