--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,7 @@ body{
   font-weight: 400;
   font-family: 'Nanum Gothic', sans-serif; 
   height: 100vh;
-  overflow: hidden;
+
 }
 img{
   display: block;
@@ -97,7 +97,32 @@ input{
   width: 100%;
   height: 100%;
 }
-#content .nomal{
+
+/*--------------------------survice_wait_list-----------------------------------*/
+
+header .line{
+  width: 100%;
+  background-color: #444444;
+  height: 10px;
+}
+#h_content{
+  display: flex;
+  position: relative;
+  height: 100px;
+}
+#h_content .h_title{
+  font-size: 50px;
+  font-weight: bold;
+  padding: 0 3%;
+  line-height: 100px;
+}
+#h_content .h_logo{
+ position: absolute;
+ left: 90%;
+ top: 50%;
+ transform: translate(-50%,-50%);
+}
+#content .tabBG{
   width: 100%;
   height: 100vh;
   overflow: auto;
@@ -106,6 +131,7 @@ input{
   width: 100%;
   border: 1px solid #444444;
   border-collapse: collapse; 
+  
 }
 .tabBG th, td {
   border: 1px solid #444444;
@@ -120,6 +146,7 @@ input{
   text-align: center;
   line-height: 70px;
   height: 70px;
+  font-weight: bold;
 }
 .tabBG table td{
   vertical-align :middle;
@@ -139,4 +166,28 @@ input{
 
 #content .nomal::-webkit-scrollbar-track{
   background-color: rgba(0,0,0,0);
+}
+.tabMenu>li>a{
+  padding:0 10px;
+	min-width: 85px;
+	line-height:50px;
+	font-size:40px;
+	text-align:center;
+	background:#eeeeee;
+	border:1px solid #dddddd;
+  color: #333;
+  transition: 0.3s;
+  box-shadow: -5px -5px 5px 5px gray;
+}
+.tabMenu{ 
+  display:flex;
+}
+.tabMenu>li>a:hover{ 
+  background:#f6b62c;
+}
+.tabBG{
+	position:absolute;
+	overflow:hidden;
+  background:#f8f8f8;
+  left: 0%;
 }
