--- a/css/common.css
+++ b/css/common.css
@@ -1,10 +1,16 @@
+@charset "uft-8";
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 body{
   color: #333;
   font-size: 16px;
   font-weight: 400;
   font-family: 'Nanum Gothic', sans-serif; 
   height: 100vh;
-
+  overflow: hidden;
 }
 img{
   display: block;
@@ -124,7 +130,7 @@ header .line{
 }
 #content .tabBG{
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   overflow: auto;
 }
 .tabBG table {
@@ -142,7 +148,7 @@ header .line{
 .tabBG table th{
   background-color: #444444;
   color: #fff;
-  font-size: 50px;
+  font-size: 40px;
   text-align: center;
   line-height: 70px;
   height: 70px;
@@ -177,7 +183,7 @@ header .line{
 	border:1px solid #dddddd;
   color: #333;
   transition: 0.3s;
-  box-shadow: -5px -5px 5px 5px gray;
+  box-shadow: 1px 1px 5px 1px gray inset;
 }
 .tabMenu{ 
   display:flex;
@@ -190,4 +196,11 @@ header .line{
 	overflow:hidden;
   background:#f8f8f8;
   left: 0%;
+}
+.reserve{
+  background-color: coral;
+  z-index: 0;
+}
+.tabMenu>li.active div{
+	z-index:99999;
 }
