--- a/css/common.css
+++ b/css/common.css
@@ -186,21 +186,22 @@ header .line{
 }
 .tabMenu>li>a{
   padding:0 10px;
-	min-width: 85px;
+	min-width: 200px;
 	line-height:50px;
 	font-size:40px;
 	text-align:center;
-	background:#eeeeee;
-	border:1px solid #dddddd;
-  color: #333;
+	background:#5D7D2B;
+	border:1px solid #444444;
+  border-radius: 20px 20px 0 0;
+  color:#FFF;
   transition: 0.3s;
-  box-shadow: 1px 1px 5px 1px gray inset;
+  font-weight: bold;
 }
 .tabMenu{ 
   display:flex;
 }
 .tabMenu>li>a:hover{ 
-  background:#f6b62c;
+  background:#ee4741;
 }
 .tabBG{
 	position:absolute;
@@ -214,9 +215,13 @@ header .line{
 .tabMenu>li.active div{
 	z-index:99999;
 }
+.tabMenu .n_btn{
+  margin: 0 10px;
+
+}
 .tabMenu>li.active .n_btn{
-  background: crimson;
+  background: #444444;
 }
 .tabMenu>li.active .r_btn{
-  background: crimson;
+  background: #444444;
 }
