--- a/css/common.css
+++ b/css/common.css
@@ -116,6 +116,7 @@ header .line{
   display: flex;
   position: relative;
   height: 100px;
+  background: linear-gradient( to bottom, #9da7afa2, #ffffff04 );
 }
 #h_content .h_title{
   font-size: 50px;
@@ -230,15 +231,69 @@ header .line{
 /*--------------------------detail_info-----------------------------------*/
 
 #car_impo{
-  border: 3px solid #444444;
+  border: 2px solid #D9D9D9;
   border-radius: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 55% 45%;
   width: 86%;
   margin: 0 5%;
   height: 20vh;
   padding: 0 2%;
+}
+.impo_title{
+  position: fixed;
+  top: 10%;
+  left: 8%;
+  background: #fff;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #6A7177;  
+}
+.car_num, .car_mile, .car_usernumber, .car_type, .car_username, .fix_history{
+  height: 100%;
+  padding-left: 100px;
+}
+.car_num, .car_mile, .car_usernumber{
+  margin-top: 2%;
+  height: 88%;
+}
+#car_impo .i_title{
+  height: fit-content;
+  padding-top: 2%;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #444444;
+}
+#car_impo .i_box{
+  height: 69%;
+  margin-top: 1%;
+}
+#car_impo .i_box>input{
+  box-shadow: 3px 3px 5px #D9D9D9;
+  border-radius: 20px;
+  height: 30px;
+  border: 1.5px solid #D9D9D9;
+  width: 50%;
+}
+#car_impo .fix_history{
+  margin-top: 3%;
+}
+#car_impo .fix_history>a{
+  border: 1.5px solid #D9D9D9;
+  width: 50%;
+  background: #5D7D2B;
+  border-radius: 20px;
+  height: 30px;
+  color: #fff;
+  font-size: 25px;
+  line-height: 30px;
+  vertical-align: middle;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1rem;
+  box-shadow: 3px 3px 5px #D9D9D9;
+
 }
 
 #middle{
@@ -252,7 +307,7 @@ header .line{
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 60% 40%;
   height: 60vh;
-  border: 3px solid #444444;
+  border: 3px solid #D9D9D9;
   border-radius: 10px;
 }
 #fix_list{
@@ -261,7 +316,7 @@ header .line{
   grid-column: 1/2;
   grid-row: 1/3;
   overflow: auto;
-  border: 2px solid #3b3c3f;
+  border: 2px solid #D9D9D9;
   padding: 2%;
   margin:13% 8% 7% 8%;
   border-radius: 10px;
@@ -272,7 +327,7 @@ header .line{
   position: relative;
 }
 .choice_fix>input{
-  border: 1px solid #3b3c3f;
+  border: 1px solid #D9D9D9;
   border-radius: 10px;
   width: 90%;
   height: 70%;
@@ -286,6 +341,7 @@ header .line{
   background: #FFF;
   font-size: 30px;
   font-weight: bold;
+  
 }
 .custom_fix{
   width: 100%;
@@ -294,17 +350,18 @@ header .line{
   grid-row: 2/3;
   position: relative;
   margin-bottom: 7%;
+  text-align: center;
 }
 .custom_fix>h1{
   position: absolute;
   top: 0;
   left: 5%;
   background: #FFF;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
 }
 .custom_fix>input{
-  border: 1px solid #3b3c3f;
+  border: 1px solid #D9D9D9;
   border-radius: 10px;
   width: 90%;
   height: 80%;
@@ -317,12 +374,13 @@ header .line{
 #fix_list input[id*="answer"] + label{
   display: block;
   border-bottom: 0;
-  color: #3b3c3f;
+  color: #8C8C8C;
   font-weight: 900;
   position: relative;
   cursor: pointer;
   font-size: 30px;
   margin-bottom: 10px;
+  text-align: center;
 }
 #fix_list input[id*="answer"] + label + div{
   max-height: 0;
@@ -376,7 +434,7 @@ header .line{
   background-color: rgba(0,0,0,0);
 }
 #final_check{
-  border: 3px solid #444444;
+  border: 3px solid #D9D9D9;
   border-radius: 10px;
   width: 30%;
   margin: 0 5%;
