--- a/css/common.css
+++ b/css/common.css
@@ -115,7 +115,9 @@ header .line{
 #h_content{
   display: flex;
   position: relative;
-  height: 100px;
+  height: 10vh;
+  margin-bottom: 10vh;
+  margin-bottom: 3vh;
   background: linear-gradient( to bottom, #9da7afa2, #ffffff04 );
 }
 #h_content .h_title{
@@ -242,35 +244,28 @@ header .line{
   padding: 0 2%;
   overflow: visible;
 }
-.title{
+.car_num_title{
   position: relative;
 }
-.title>h1{
-  position: absolute;
-  top:0;
-  left: 20px;
-  z-index: 99999;
+.car_num_title .c_title{
+  position: fixed;
   background: #fff;
   font-size: 2rem;
   font-weight: bold;
-  color: #6A7177;  
+  color: #6A7177; 
+  left: 15vh;
+  top:12.5vh; 
 }
 .car_num, .car_mile, .car_usernumber, .car_type, .car_username, .fix_history{
   height: 100%;
   padding-left: 100px;
 }
 .car_num, .car_mile, .car_usernumber{
-  margin-top: 2%;
-  height: 68%
+  margin-top: 4%;
+  height: 96%
 }
 .car_type, .car_username, .fix_history{
   height: 100%;
-}
-#car_impo .i_title{
-  height: fit-content;
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #444444;
 }
 #car_impo .i_box{
   height: 69%;
@@ -279,7 +274,7 @@ header .line{
 #car_impo .i_box>input{
   box-shadow: 3px 3px 5px #D9D9D9;
   border-radius: 20px;
-  height: 30px;
+  height: 25px;
   border: 1.5px solid #D9D9D9;
   width: 50%;
 }
@@ -316,10 +311,11 @@ header .line{
   height: 60vh;
   border: 3px solid #D9D9D9;
   border-radius: 10px;
+  box-shadow: 3px 3px 5px #D9D9D9;
 }
 #fix_list{
   width: 80%;
-  height: 80%;
+  max-height: 80%;
   grid-column: 1/2;
   grid-row: 1/3;
   overflow: auto;
@@ -327,19 +323,21 @@ header .line{
   padding: 2%;
   margin:13% 8% 7% 8%;
   border-radius: 10px;
+  box-shadow: 3px 3px 5px #D9D9D9;
 }
 .choice_fix{
   width: 100%;
   height: 100%;
   position: relative;
 }
-.choice_fix>input{
+.choice_fix #result{
   border: 1px solid #D9D9D9;
   border-radius: 10px;
   width: 90%;
   height: 70%;
   margin-top: 13%;
   display: block;
+  box-shadow: 3px 3px 5px #D9D9D9;
 }
 .choice_fix>h1{
   position: absolute;
@@ -374,6 +372,8 @@ header .line{
   height: 80%;
   margin-top: 2%;
   display: block;
+  box-shadow: 3px 3px 5px #D9D9D9;
+  display: none;
 }
 #fix_list input[id*="answer"]{
   display: none;
@@ -381,11 +381,11 @@ header .line{
 #fix_list input[id*="answer"] + label{
   display: block;
   border-bottom: 0;
-  color: #3b3c3f;
-  font-weight: 900;
+  color: #3f3b3f;
+  font-weight: bold;
   position: relative;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 25px;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -422,7 +422,7 @@ header .line{
   font-weight: 900;
 }
 #fix_list input[id*="answer"]:checked + label + div{
-  max-height:350px; 
+  max-height:400px; 
 
 }
 #fix_list input[id*="answer"]:checked + label em{
